# mvp-analyzer

./: .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  ai.py  api.py  cache.py  client.py  config.py  main.py  normalizer.py  schemas.py
docs/: Technical Documentation_ENG.md  Technical Documentation_UKR.md
tests/: test_analyze.py
